backup_cluster/default_export/ingress.extensions_nodejs-ml-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{},"name":"nodejs-ml-ingress","namespace":"default"},"spec":{"rules":[{"host":"nodejs-ml-app","http":{"paths":[{"backend":{"serviceName":"nodejs-ml-service","servicePort":3000},"path":"/"}]}}]}}
  creationTimestamp: null
  generation: 1
  name: nodejs-ml-ingress
  selfLink: /apis/extensions/v1beta1/namespaces/default/ingresses/nodejs-ml-ingress
spec:
  rules:
  - host: nodejs-ml-app
    http:
      paths:
      - backend:
          serviceName: nodejs-ml-service
          servicePort: 3000
        path: /
status:
  loadBalancer: {}
